removed alternate strategies, added auth0

--- a/package.json
+++ b/package.json
@@ -17,7 +17,6 @@
     "express-session": "^1.14.0",
     "massive": "^2.5.0",
     "passport": "^0.3.2",
-    "passport-facebook": "^2.1.1",
-    "passport-local": "^1.0.0"
+    "passport-auth0": "^0.6.0"
   }
 }
